# src/main/java/org/liuyi/chat/domain/message/ContentType.java
@@ -2,5 +2,7 @@ package org.liuyi.chat.domain.message;
 
 public enum ContentType {
     Text,
-    // Phone, Speech, Document 等后续扩展
+    Image,
+    Speech,
+    Document,
 }
