# src/main/java/org/liuyi/chat/domain/message/DocumentType.java
@@ -1,0 +1,8 @@
+package org.liuyi.chat.domain.message;
+
+public enum DocumentType {
+    PDF,
+    TXT,
+    WORD,
+    OTHER,
+}
